--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "keywords": [],
   "engines": {
-       "node": "12.16.1"
-     },
+    "node": "12.16.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -28,6 +28,7 @@
     "knex": "^0.21.1",
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
+    "postgrator": "^4.0.0",
     "treeize": "^2.1.2",
     "xss": "^1.0.6"
   },
