--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "knex": "^0.21.1",
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
-    "postgrator-cli": "^4.0.0",
+    "postgrator": "^5.0.0",
     "treeize": "^2.1.2",
     "xss": "^1.0.6"
   },
