--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
     "postgrator": "^5.0.0",
+    "postgrator-cli": "^4.0.0",
     "treeize": "^2.1.2",
     "xss": "^1.0.6"
   },
